<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>spring-boot-starter-parent</artifactId>
        <groupId>org.springframework.boot</groupId>
        <version>3.1.2</version>
    </parent>
    <groupId>eu.bbmri_eric.negotiator</groupId>
    <artifactId>negotiator</artifactId>
    <version>3.0.1</version>
    <name>BBMRI-ERIC Negotiator</name>
    <packaging>jar</packaging>
    <description>A web-based application for managing access negotiations.</description>

    <properties>
        <java.version>17</java.version>
    </properties>

    <build>
        <finalName>negotiator</finalName>
        <plugins>
            <plugin>
                <artifactId>fmt-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <groupId>com.spotify.fmt</groupId>
                <version>2.20</version>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/unit/**</include>
                    </includes>
                </configuration>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <configuration>
                            <includes>
                                <include>**/integration/**</include>
                            </includes>
                        </configuration>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <id>integration-tests</id>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId> <!-- Adjust version as needed -->
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <configuration>
                            <classifier>spring-boot</classifier>
                            <mainClass>eu.bbmri_eric.negotiator.NegotiatorApplication</mainClass>
                        </configuration>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <groupId>org.springframework.boot</groupId>
                <version>2.7.5</version>
            </plugin>
            <plugin>
                <artifactId>jacoco-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>eu/bbmri_eric/negotiator/configuration/**</exclude>
                        <exclude>eu/bbmri_eric/negotiator/NegotiatorApplication.java</exclude>
                        <exclude>eu/bbmri_eric/negotiator/ServletInitializer.java</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <id>report</id>
                        <phase>test</phase>
                    </execution>
                    <execution>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <id>reportIntegration</id>
                        <phase>verify</phase>
                    </execution>
                </executions>
                <groupId>org.jacoco</groupId>
                <version>0.8.8</version>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <version>6.0.11</version>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <groupId>org.springframework.boot</groupId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
            <groupId>org.springframework.boot</groupId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-security</artifactId>
            <groupId>org.springframework.boot</groupId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-web</artifactId>
            <groupId>org.springframework.boot</groupId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter</artifactId>
            <groupId>org.springframework.boot</groupId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <artifactId>spring-statemachine-starter</artifactId>
            <groupId>org.springframework.statemachine</groupId>
            <version>3.2.1</version>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-mail</artifactId>
            <groupId>org.springframework.boot</groupId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <artifactId>spring-context-support</artifactId>
            <groupId>org.springframework</groupId>
            <version>6.0.11</version>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-test</artifactId>
            <groupId>org.springframework.boot</groupId>
            <version>3.1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>spring-security-test</artifactId>
            <groupId>org.springframework.security</groupId>
            <version>6.1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-validation</artifactId>
            <groupId>org.springframework.boot</groupId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <artifactId>jakarta.activation-api</artifactId>
            <groupId>jakarta.activation</groupId>
            <version>2.1.2</version>
        </dependency>
        <dependency>
            <artifactId>jakarta.mail</artifactId>
            <groupId>com.sun.mail</groupId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <artifactId>lombok</artifactId>
            <groupId>org.projectlombok</groupId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <artifactId>h2</artifactId>
            <groupId>com.h2database</groupId>
            <version>2.2.220</version>
        </dependency>
        <dependency>
            <artifactId>postgresql</artifactId>
            <groupId>org.postgresql</groupId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <artifactId>modelmapper-spring</artifactId>
            <groupId>org.modelmapper.extensions</groupId>
            <version>3.1.0</version>
        </dependency>

        <dependency>
            <artifactId>jackson-annotations</artifactId>
            <groupId>com.fasterxml.jackson.core</groupId>
        </dependency>
        <dependency>
            <artifactId>hibernate-types-55</artifactId>
            <groupId>com.vladmihalcea</groupId>
            <version>2.14.0</version>
        </dependency>

        <dependency>
            <artifactId>junit-jupiter-api</artifactId>
            <groupId>org.junit.jupiter</groupId>
            <scope>test</scope>
            <version>5.9.1</version>
        </dependency>
        <dependency>
            <artifactId>springdoc-openapi-ui</artifactId>
            <groupId>org.springdoc</groupId>
            <version>1.6.12</version>
        </dependency>
        <dependency>
            <artifactId>junit</artifactId>
            <groupId>junit</groupId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>json</artifactId>
            <groupId>org.json</groupId>
            <version>20230227</version>
        </dependency>
        <dependency>
            <artifactId>reactor-core</artifactId>
            <groupId>io.projectreactor</groupId>
            <version>3.4.23</version>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>2.1.1</version>
        </dependency>
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>com.sun.istack</groupId>
            <artifactId>istack-commons-runtime</artifactId>
            <version>4.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.statemachine</groupId>
            <artifactId>spring-statemachine-recipes-common</artifactId>
            <version>3.2.1</version>
        </dependency>
    </dependencies>
</project>
